arun-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: arun-liveness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: arun-live
    livenessProbe:
      httpGet:
        path: /
        port: 8080
