pod1-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - image: arunvel1988/arun-nodejs
    name: arun-nodejs
    ports:
    - containerPort: 8080
      protocol: TCP
